--- a/jt-manager/pom.xml
+++ b/jt-manager/pom.xml
@@ -13,6 +13,14 @@
     <packaging>war</packaging>
 
     <dependencies>
+
+        <!--依赖common模块-->
+        <dependency>
+            <groupId>org.renhj</groupId>
+            <artifactId>jt-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
