--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
         <druid.version>1.0.23</druid.version>
         <!--shiro-spring 版本-->
         <shiro-spring.version>1.3.2</shiro-spring.version>
+        <!--aspectj版本-->
+        <aspectj.version>1.8.9</aspectj.version>
     </properties>
 
 </project>
