--- a/jt-common/pom.xml
+++ b/jt-common/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jt-common</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!--log4j日志工具-->
@@ -95,6 +96,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.9.6</version>
         </dependency>
     </dependencies>
 
