--- a/jt-manager/pom.xml
+++ b/jt-manager/pom.xml
@@ -51,6 +51,11 @@
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector.version}</version>
@@ -97,6 +102,7 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.9.6</version>
         </dependency>
+        <!--shiro 用户权限管理-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
