--- a/jt-manager/src/main/webapp/WEB-INF/web.xml
+++ b/jt-manager/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,20 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--配置shiro过滤器-->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>shiroFilterFactory</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!-- Spring DispatcherServlet 配置 -->
     <servlet>
         <servlet-name>DispatcherServlet</servlet-name>
