--- a/jt-web/pom.xml
+++ b/jt-web/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
         <!-- mysql驱动包 -->
         <dependency>
             <groupId>mysql</groupId>
