--- a/jt-manager/src/main/resources/log4j.properties
+++ b/jt-manager/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=INFO,stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
 
 log4j.logger.com.mybatis3=DEBUG
-log4j.logger.org.renhj=INFO
-log4j.logger.org.springframework=ERROR
+log4j.logger.org.renhj=DEBUG
+log4j.logger.org.springframework=DEBUG
