--- a/jt-manager/pom.xml
+++ b/jt-manager/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>shiro-spring</artifactId>
             <version>${shiro-spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
