--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
         <aspectj.version>1.8.9</aspectj.version>
 
         <slf4j.version>1.7.25</slf4j.version>
+
+        <atomikos.version></atomikos.version>
     </properties>
 
 </project>
