--- a/jt-manager/src/main/resources/log4j.properties
+++ b/jt-manager/src/main/resources/log4j.properties
@@ -6,5 +6,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%c]-[%p]
 
 log4j.logger.com.mybatis3=DEBUG
 log4j.logger.org.renhj=DEBUG
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.mybatis.generator=DEBUG
+log4j.logger.org.springframework=INFO
