--- a/jt-manager/src/main/webapp/WEB-INF/web.xml
+++ b/jt-manager/src/main/webapp/WEB-INF/web.xml
@@ -17,21 +17,21 @@
         <url-pattern>/</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:/spring/applicationContext-*.xml</param-value>
     </context-param>
-
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
     
     <servlet>
         <servlet-name>dispathcerServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:/spring/spring-mvc.xml</param-value>
+            <param-value>classpath:/spring/*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
