--- a/jt-manager/pom.xml
+++ b/jt-manager/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>jt-manager</finalName>
