--- a/jt-manager/src/main/resources/config.properties
+++ b/jt-manager/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jtdb
+jdbc.url=jdbc:mysql://192.168.249.119:3306/jtdb
 jdbc.user=root
 jdbc.password=ren123
 
