--- a/jt-manager/src/main/resources/jdbc.properties
+++ b/jt-manager/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql:///jtdb
+url=jdbc:mysql://192.168.249.119:3306/jtdb
 username=root
 password=ren123
