--- a/jt-manager/src/main/resources/jdbc.properties
+++ b/jt-manager/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql:///jtdb
+url=jdbc:mysql://localhost:8066/jtdb
 username=root
-password=ren123
+password=123456
