--- a/jt-manager/src/main/resources/config.properties
+++ b/jt-manager/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jtdb
+jdbc.url=jdbc:mysql://localhost:8066/jtdb
 jdbc.user=root
-jdbc.password=ren123
+jdbc.password=123456
 
 
 jdbc.maxPoolSize=50
