--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <junit.version>4.12</junit.version>
         <!-- spring 依赖版本 -->
         <spring.version>5.1.3.RELEASE</spring.version>
+        <spring.data.redis>2.1.5.RELEASE</spring.data.redis>
 
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis.spring.version>1.2.2</mybatis.spring.version>
@@ -47,7 +48,7 @@
         <jackson.version>2.9.7</jackson.version>
         <fastjson.version>1.2.47</fastjson.version>
         <httpclient.version>4.3.5</httpclient.version>
-        <jedis.version>2.6.2</jedis.version>
+        <jedis.version>2.9.0</jedis.version>
         <lombok.version>1.16.20</lombok.version>
 
         <aspectj.version>1.9.2</aspectj.version>
